    to "bool * (sledgehammer_outcome * string)". The former value can be
    recomputed with "apsnd (ATP_Util.map_prod
    Sledgehammer.short_string_of_sledgehammer_outcome single)".
    INCOMPATIBILITY.
  - Added support for TX0 and TX1 TPTP formats and $ite/$let expressions
    in TH0 and TH1.
  - Added support for cvc5.
  - Replaced option "sledgehammer_atp_dest_dir" by
    "sledgehammer_atp_problem_dest_dir", for problem files, and
    "sledgehammer_atp_proof_dest_dir", for proof files. Minor INCOMPATIBILITY.
  - Removed support for experimental prover 'z3_tptp'.
  - The fastest successfully preplayed proof is always suggested.
  - All SMT solvers but Z3 now resort to suggest (smt (verit)) when no proof
    could be preplayed.
  - Added new "some_preplayed" value to "expect" option to specify that some
    successfully preplayed proof is expected. This is in contrast to the "some"
    value which doesn't specify whether preplay succeeds or not.

* Mirabelle:
  - Replaced sledgehammer option "keep" by
    "keep_probs", for problems files, and
    "keep_proofs" for proof files. Minor INCOMPATIBILITY.
  - Added option "-r INT" to randomize the goals with a given 64-bit seed before
    selection.
  - Added option "-y" for a dry run.
  - Renamed run_action to run in Mirabelle.action record. Minor INCOMPATIBILITY.
  - Run the actions on goals before commands "unfolding" and "using".

* Meson
  - Added support for polymorphic "using" facts. Minor INCOMPATIBILITY.

* (Co)datatype package:
  - BNFs now require a strict cardinality bound (<o instead of \<le>o).
    Minor INCOMPATIBILITY for existing manual BNF declarations.
  - Lemma map_ident_strong is now generated for all BNFs.

* More ambitious minimization of case expressions in generated code.

* Code generation for Scala: type annotations in pattern bindings
  are printed in a way suitable for Scala 3.


*** ML ***

* Type Bytes.T supports scalable byte strings, beyond the limit of